# snippets

./: .pre-commit-config.yaml  .readthedocs.yaml  Makefile  aws.rst  conf.py  docker-compose-postgres.yml  docker-compose-redis.yml  docker-compose.rst  docker.rst  index.rst  node.rst  oneliners.rst  poetry-init.sh  poetry.rst  pre-commit.rst  pydantic.rst  pyproject.toml  python-project.rst  tmuxinator-docker-compose.yml  tmuxinator.rst
