[tool.poetry]
name = "snippets"
version = "0.1.0"
description = ""
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
doc2dash = "^2.4.0"
Sphinx = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
